<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Speaq</string>
    <string name="action_settings">Settings</string>
    <string name="voice_read">Read your SMS out loud</string>
    <string name="pref_voice_read_sms">SMS Settings</string>
    <string name="read_caller">Read the SMS sender</string>
    <string name="read_body">Read the SMS body</string>
    <string name="read_body_summary">Read the SMS Message</string>
    <string name="read_caller_summary">Read the SMS Sender</string>
    <string name="headset_summary">Auto read when headset connected</string>
    <string name="bluetooth_summary">Auto read when bluetooth connected</string>
    <string name="headset">Headset</string>
    <string name="bluetooth">Bluetooth</string>

</resources>
